Refactor tests and add new test classes: improve code organization by removing unused tests, creating new test files for CommonGameController, CommonPlayer, CommonTile, and updating package structure for Dice and Die tests